    - Fixed order of icons of first tier of science packs in lab reflectig better the order of progression
    - Fixed that fast inserter could carry higher stack size than bulk inserter
    - Fixed chromium cobalt recipe
    - Fixed biusart lab graphics (before it was low res)
    - Fixed changelog visibility in game
---------------------------------------------------------------------------------------------------
Version: 0.3.15
Date: 2025-05-16
  Features:
    - Added coast water for having big algae farms. Can only be placed on deepwater.
    - Added artificial gleba tile
    - Added black and white reinforced plate tiles
  Changes:
    - Fungi renamed to honeycomb fungus
    - Wheat is now accquired from wheat plants on nauvis growing on dry and grass tiles on nauvis terrain
    - Honeycomb fungus is no accquired from honeycomb fungus plant growing on gleba terrain
    - Wheat and honeycomb fungus can be cultivated just like othar plants
    - Recipe changes for accquiring spores
    - Updated some agriculture related icons
  Bugfixes:
    - Fixed enriching iron recipe
    - Fixed some en locale
    - Fixed magnesium not being able to be mined until reaching sulfur processing
---------------------------------------------------------------------------------------------------
Version: 0.3.14
Date: 2025-05-09
  Features:
    - Added ultramafic lava. This recource is accquired in the center of vulcanoes and provides rare minerals.
    - Added vulcanic rocks
    - Added new melting recipes from lava
    - Added new casting recipes
  Changes:
    - Updated existing melting and casting recipes
    - Removed low density structure, concrete and pipe to ground casting recipes
    - Kovarex enrichment does not need space science to be unlocked
    - Agricultural science does not spoil any more. Noice
    - Updated Japanese locale thanks to Snow note
  Bugfixes: