@@ -12,7 +12,7 @@ data.raw.technology["aai-strongbox-storage"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
@@ -46,7 +46,7 @@ data.raw.technology["aai-storehouse-storage"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
@@ -79,7 +79,7 @@ data.raw.technology["aai-warehouse-storage"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
