@@ -778,7 +778,7 @@ data.raw.technology["robotics"].unit.ingredients = {
   {"logistic-science-pack", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-1", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
@@ -790,7 +790,7 @@ data.raw.technology["construction-robotics"].unit.ingredients = {
   {"logistic-science-pack", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
@@ -802,7 +802,7 @@ data.raw.technology["logistic-robotics"].unit.ingredients = {
   {"logistic-science-pack", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
@@ -833,7 +833,7 @@ data.raw.technology["personal-roboport-equipment"].unit.ingredients = {
   {"logistic-science-pack", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-geological-science-pack-1", 1},
   {"metallurgic-science-pack", 1},
   {"electromagnetic-science-pack", 1}
@@ -1275,7 +1275,7 @@ data.raw.technology["defender"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-military-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
@@ -1984,7 +1984,7 @@ data.raw.technology["follower-robot-count-1"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-military-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
@@ -1996,7 +1996,7 @@ data.raw.technology["follower-robot-count-2"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-military-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
@@ -2008,7 +2008,7 @@ data.raw.technology["follower-robot-count-3"].unit.ingredients = {
   {"sp-logistic-science-pack-2", 1},
   {"chemical-science-pack", 1},
   {"sp-electronic-science-pack-1", 1},
-  {"sp-material-science-pack-1", 1},
+  {"sp-material-science-pack-2", 1},
   {"sp-military-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
   {"metallurgic-science-pack", 1},
