@@ -4905,13 +4905,13 @@ data:extend({
     },
     unit =
     {
-      count = 200,
+      count = 150,
       ingredients = {
         {"sp-automation-science-pack-2", 1},
         {"logistic-science-pack", 1},
         {"chemical-science-pack", 1},
         {"sp-electronic-science-pack-1", 1},
-        {"sp-material-science-pack-1", 1},
+        {"sp-material-science-pack-2", 1},
         {"sp-geological-science-pack-1", 1},
         {"metallurgic-science-pack", 1},
         {"electromagnetic-science-pack", 1}
@@ -10293,7 +10293,7 @@ data:extend({
         {"logistic-science-pack", 1},
         {"chemical-science-pack", 1},
         {"sp-electronic-science-pack-1", 1},
-        {"sp-material-science-pack-1", 1},
+        {"sp-material-science-pack-2", 1},
         {"sp-geological-science-pack-1", 1},
         {"metallurgic-science-pack", 1},
         {"electromagnetic-science-pack", 1}
